# ClawBench-WebsiteBench

./: .gitignore  404.html  AGENTS.md  CONTRIBUTING.md  CURATION.md  LICENSE  NOTICE  PROJECT.md  README.md  WebsiteBench.md  pyproject.toml  render.yaml  site-manifest.json
.github/workflows/: amazon-clone.yml  pages.yml  tests.yml
compare/: index.html
data/: index.json
deploy/amazon-clone/: Dockerfile  README.md
deploy/websitebench-cloudflare-worker/: .gitignore  LICENSE  NOTICE  README.md  package-lock.json  package.json  wrangler.jsonc
deploy/websitebench-viewer/: Dockerfile  Dockerfile.dockerignore  compose.yaml
docs/: amazon-permanent-demo.md  benchmark-infrastructure-hitl-standard.md  claw-bench-v2-live-site-clone-plan.md  harbor-fullstack-benchmark.md  harbor-live-site-corpus-audit-2026-07-23.md  offline-clone-amazon-case-study.md  offline-clone-harness.md  offline-trajectory.md  websitebench-infrastructure.zh-CN.md  websitebench-viewer.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
harbor/: README.md
harbor/instances/: README.md
harbor/sites/: README.md
materials/amazon/: EVIDENCE_SHA256SUMS  FRONTEND_ROUTE_MATRIX.md  README.md  REBUILD_CONTEXT.md  clone.yaml  runtime-manifest.json  viewer-public.json
methodology/: index.html
project/: plan.json
research_state/00_state/: current_state.md  decision_log.md
research_state/06_experiments/: decision_value_plan_C001.md  experiment_log.md
schemas/: task.schema.json
scripts/: build-github-pages.mjs
skills/build-offline-site-clone/: SKILL.md
src/clawbench/: __init__.py  amazon_contract.py
static/: app.js  styles.css
tasks/: README.md  index.html
tasks/websitebench--northstar-market/: index.html
tests/harbor/: test_authoring.py  test_scoring_template.py  test_verifier_helpers.py
tests/offline_clone/: __init__.py  helpers.py  test_acceptance_evidence.py  test_assets.py  test_coverage.py  test_gates.py  test_live_site_inventory.py  test_locking.py  test_manifest_and_cli.py  test_records.py  test_state_command_inputs.py
tests/project/: test_project_plan.py
tests/viewer/: test_discovery.py  test_playwright_viewer.py  test_reviews.py  test_security_and_app.py  test_visual_and_gateway.py
tests/web2code/: test_northstar_contracts.py  test_northstar_reference.py  test_registry_variants_batch.py  test_trajectory_export.py  test_web2code_isolation.py  test_web2code_scoring.py
website-clone/v2-086-job-search-hr-cv-autofill-greenhouse-meta/: .gitignore  ASSET_ATTRIBUTION.md  CODEX_TRAJECTORY.md  LIMITATIONS.md  README.md  server.py  verification-report.json
website-clone/v2-583-office-secretary-tasks-support-tickets-freshdesk/: .gitignore  ASSET_ATTRIBUTION.md  CODEX_TRAJECTORY.md  LIMITATIONS.md  README.md  (+2 more)
websitebench/: README.md  registry.yaml  viewer-public-allowlist.json
websitebench/northstar-market/reference/: Dockerfile  README.md  pyproject.toml
websitebench/northstar-market/reference/northstar/: __init__.py  app.py  database.py  mail.py  run.py  security.py  store.py
websitebench/northstar-market/reference/northstar/static/: site.css  site.js
websitebench/northstar-market/reference/northstar/templates/: base.html  cart.html  checkout.html  forgot.html  home.html  login.html  macros.html  message.html  not-found.html  order-detail.html  order-success.html  orders.html  product.html  register.html  reset.html  search.html
websitebench/northstar-market/reference/scripts/: reset  seed
websitebench/northstar-market/reference/tools/: generate_fixtures.py
websitebench/services/builder/: Dockerfile  pyproject.toml
websitebench/services/builder/benchbuilder/: __init__.py  app.py
(+539 files in other folders)
