[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "clawbench-websitebench"
version = "1.0.0"
description = "Offline website-clone harness, Amazon case study, and corpus viewer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=23.1",
    "fastapi>=0.115",
    "httpx>=0.27",
    "jinja2>=3.1",
    "jsonschema>=4.26.0",
    "numpy>=1.26",
    "pillow>=11.0",
    "playwright>=1.50",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "scikit-image>=0.25",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[project.scripts]
clawbench-viewer = "clawbench.viewer.cli:main"
clawbench-offline-clone = "clawbench.offline_clone.cli:main"
clawbench-harbor = "clawbench.harbor.cli:main"
clawbench-project = "clawbench.project.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clawbench"]

[tool.hatch.build.targets.wheel.force-include]
"websitebench/schemas" = "clawbench/viewer/_schemas"
"NOTICE" = "clawbench/NOTICE"

[tool.hatch.build.targets.sdist]
include = [
    "/src/clawbench",
    "/websitebench",
    "/harbor",
    "/project",
    "/skills/build-offline-site-clone",
    "/tests",
    "/deploy",
    "/docs",
    "/README.md",
    "/CONTRIBUTING.md",
    "/LICENSE",
    "/NOTICE",
]

[tool.ruff]
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

