[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "northstar-market-reference"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "argon2-cffi==25.1.0",
  "fastapi==0.128.0",
  "httpx==0.28.1",
  "jinja2==3.1.6",
  "jsonschema==4.26.0",
  "python-multipart==0.0.21",
  "uvicorn==0.40.0",
]

[tool.hatch.build.targets.wheel]
packages = ["northstar"]

