[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "websitebench-candidate-builder"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = ["fastapi==0.128.0", "httpx==0.28.1", "uvicorn==0.40.0"]

[tool.hatch.build.targets.wheel]
packages = ["benchbuilder"]

